# django_tutorial

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml
django_tutorial/: enviroment.py  settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: results.html
templates/admin/: base_site.html
